--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://atugatran.github.io/FontAwesome6Pro/css/all.min.css">
     <title>Home - Digital Marketing, Website and Mobile App Development Company</title>
-
-    
 </head>
 
 <body>
@@ -31,7 +29,7 @@
             <div class="menu-toggle">☰</div>
 
             <ul class="nav-menu">
-                <li><a id="tb" href="index.html">Home</a></li>
+                <li><a id="tb" href="http://127.0.0.1:5501/index.html">Home</a></li>
 
                 <li class="dropdown">
                     <a id="tb" href="service.html">Services <i class="fa-solid fa-caret-down"></i></a>
@@ -40,39 +38,39 @@
                             <a href="">Digital Marketing </a>
                             <ul class="submenu">
                                 <li><a href="SEO.html">SEO</a></li>
-                                <li><a href="PPC.html">PPC Advertising</a></li>
-                                <li><a href="#">Social Media Marketing</a></li>
-                                <li><a href="#">Content Marketing</a></li>
+                                <li><a href="digital_marketing.html">PPC Advertising</a></li>
+                                <li><a href="SMM.html">Social Media Marketing</a></li>
+                                <li><a href="CMS.html">Content Marketing</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">Web Development</a>
                             <ul class="submenu">
-                                <li><a href="#">Custom Website Development</a></li>
-                                <li><a href="#">E-commerce Solutions</a></li>
-                                <li><a href="#">CMS Development</a></li>
+                                <li><a href="CustomWebsiteDevelopment.html">Custom Website Development</a></li>
+                                <li><a href="E-Commerce.html">E-commerce Solutions</a></li>
+                                <li><a href="CMS_Development.html">CMS Development</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">App Development</a>
                             <ul class="submenu">
-                                <li><a href="#">iOS & Android App Development</a></li>
-                                <li><a href="#">Hybrid App Solutions</a></li>
+                                <li><a href="iOS_&_Android_Development.html">iOS & Android App Development</a></li>
+                                <li><a href="Hybrid.html">Hybrid App Solutions</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">Software Development</a>
                             <ul class="submenu">
-                                <li><a href="#">Custom Software Solutions</a></li>
-                                <li><a href="#">Enterprise Software Integration</a></li>
+                                <li><a href="Custom_Software_Solutions.html">Custom Software Solutions</a>  </li>
+                                <li><a href="Enterprice_Software_Integration.html">Enterprise Software Integration</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">Automation Services</a>
                             <ul class="submenu">
-                                <li><a href="#">Marketing Automation</a></li>
-                                <li><a href="#">Workflow Automation</a></li>
-                                <li><a href="#">CRM Solutions</a></li>
+                                <li><a href="Marketing_Automation.html">Marketing Automation</a></li>
+                                <li><a href="Workflow_Automation.html">Workflow Automation</a></li>
+                                <li><a href="CRM_Solutions.html">CRM Solutions</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -183,7 +181,7 @@
 
                 <div id="s1-workarea">
                     <div id="s1-content">
-                        <div id="null" class="grid-item"></div>
+                        <div id="null" class="grid-item1"></div>
                         <div class="grid-item">
                             <h3 class="rvenue-heading">Drive website traffic</h3>
                         </div>
@@ -206,7 +204,7 @@
                     </div>
                     <div id="line2"></div>
                     <div id="s2-content">
-                        <div class="grid-item"></div>
+                        <div class="grid-item1"></div>
                         <div class="grid-item">
                             <h3 class="rvenue-heading">Drive website traffic</h3>
                         </div>
@@ -229,7 +227,7 @@
                     </div>
                     <div id="line3"></div>
                     <div id="s3-content">
-                        <div class="grid-item"></div>
+                        <div class="grid-item1"></div>
                         <div class="grid-item">
                             <h3 class="rvenue-heading">Drive website traffic</h3>
                         </div>
@@ -252,7 +250,7 @@
                     </div>
                     <div id="line4"></div>
                     <div id="s4-content">
-                        <div class="grid-item"></div>
+                        <div class="grid-item1"></div>
                         <div class="grid-item">
                             <h3 class="rvenue-heading">Drive website traffic</h3>
                         </div>
