--- a/service.html
+++ b/service.html
@@ -30,40 +30,40 @@
                         <li class="dropdown">
                             <a href="#">Digital Marketing </a>
                             <ul class="submenu">
-                                <li><a href="#">SEO</a></li>
-                                <li><a href="#">PPC Advertising</a></li>
-                                <li><a href="#">Social Media Marketing</a></li>
-                                <li><a href="#">Content Marketing</a></li>
+                                <li><a href="SEO.html">SEO</a></li>
+                                <li><a href="PPC.html">PPC Advertising</a></li>
+                                <li><a href="SMM.html">Social Media Marketing</a></li>
+                                <li><a href="CMS.html">Content Marketing</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">Web Development</a>
                             <ul class="submenu">
-                                <li><a href="#">Custom Website Development</a></li>
-                                <li><a href="#">E-commerce Solutions</a></li>
-                                <li><a href="#">CMS Development</a></li>
+                                <li><a href="CustomWebsiteDevelopment.html">Custom Website Development</a></li>
+                                <li><a href="E-Commerce.html">E-commerce Solutions</a></li>
+                                <li><a href="CMS_Development.html">CMS Development</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">App Development</a>
                             <ul class="submenu">
-                                <li><a href="#">iOS & Android App Development</a></li>
-                                <li><a href="#">Hybrid App Solutions</a></li>
+                                <li><a href="iOS_&_Android_Development.html">iOS & Android App Development</a></li>
+                                <li><a href="Hybrid.html">Hybrid App Solutions</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">Software Development</a>
                             <ul class="submenu">
-                                <li><a href="#">Custom Software Solutions</a></li>
-                                <li><a href="#">Enterprise Software Integration</a></li>
+                                <li><a href="Custom_Software_Solutions.html">Custom Software Solutions</a></li>
+                                <li><a href="Enterprice_Software_Integration.html">Enterprise Software Integration</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#">Automation Services</a>
                             <ul class="submenu">
-                                <li><a href="#">Marketing Automation</a></li>
-                                <li><a href="#">Workflow Automation</a></li>
-                                <li><a href="#">CRM Solutions</a></li>
+                                <li><a href="Marketing_Automation.html">Marketing Automation</a></li>
+                                <li><a href="Workflow_Automation.html">Workflow Automation</a></li>
+                                <li><a href="CRM_Solutions.html">CRM Solutions</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -122,7 +122,7 @@
                 We’ll Make You Excessively More Money
                 Than Any Other Marketing Team
             </h1>
-            <p class="v3s-parag0apg">All the pieces it takes to solve your marketing puzzle ,
+            <p class="v3s-parag0apg">All the pieces it takes to solve your marketing puzzle,
                 all under the same roof.</p>
             <div class="btn-service-banner">
                 <a href="#" class="cta-button">GET YOUR FREE MARKETING PLAN</a>
