21/02/2025 new changes by nitin

--- a/CMS.html
+++ b/CMS.html
@@ -24,61 +24,39 @@
             <ul class="nav-menu">
                 <li><a href="http://127.0.0.1:5501/index.html">Home</a></li>
 
-                <li class="dropdown">
-                    <a href="service.html">Services <i class="fa-solid fa-caret-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li class="dropdown">
-                            <a href="#">Digital Marketing </a>
-                            <ul class="submenu">
-                                <li><a href="SEO.html">SEO</a></li>
-                                <li><a href="PPC.html">PPC Advertising</a></li>
-                                <li><a href="SMM.html">Social Media Marketing</a></li>
-                                <li><a href="CMS.html">Content Marketing</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">Web Development</a>
-                            <ul class="submenu">
-                                <li><a href="CustomWebsiteDevelopment.html">Custom Website Development</a></li>
-                                <li><a href="E-Commerce.html">E-commerce Solutions</a></li>
-                                <li><a href="CMS_Development.html">CMS Development</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">App Development</a>
-                            <ul class="submenu">
-                                <li><a href="iOS_&_Android_Development.html">iOS & Android App Development</a></li>
-                                <li><a href="Hybrid.html">Hybrid App Solutions</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">Software Development</a>
-                            <ul class="submenu">
-                                <li><a href="Custom_Software_Solutions.html">Custom Software Solutions</a></li>
-                                <li><a href="Enterprice_Software_Integration.html">Enterprise Software Integration</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">Automation Services</a>
-                            <ul class="submenu">
-                                <li><a href="Marketing_Automation.html">Marketing Automation</a></li>
-                                <li><a href="Workflow_Automation.html">Workflow Automation</a></li>
-                                <li><a href="CRM_Solutions.html">CRM Solutions</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#">Industries We Serve <i class="fa-solid fa-caret-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Healthcare</a></li>
-                        <li><a href="#">Education</a></li>
-                        <li><a href="#">Retail & E-commerce</a></li>
-                        <li><a href="#">Finance & Banking</a></li>
-                        <li><a href="#">Real Estate</a></li>
-                        <li><a href="#">Startups & Small Businesses</a></li>
-                    </ul>
+                <li class="dropdown services">
+                    <a id="tb" href="service.html" style="color: black;">Services <i class="fa-solid fa-caret-down"></i></a>
+                    <div class="mega-menu">
+                        <div class="mega-column">
+                            <h3>Digital Marketing</h3>
+                            <a href="SEO.html">SEO</a>
+                            <a href="digital_marketing.html">PPC Advertising</a>
+                            <a href="SMM.html">Social Media Marketing</a>
+                            <a href="CMS.html">Content Marketing</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>Web Development</h3>
+                            <a href="CustomWebsiteDevelopment.html">Custom Website Development</a>
+                            <a href="E-Commerce.html">E-commerce Solutions</a>
+                            <a href="CMS_Development.html">CMS Development</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>App Development</h3>
+                            <a href="iOS_&_Android_Development.html">iOS & Android App Development</a>
+                            <a href="Hybrid.html">Hybrid App Solutions</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>Software Development</h3>
+                            <a href="Custom_Software_Solutions.html">Custom Software Solutions</a>
+                            <a href="Enterprice_Software_Integration.html">Enterprise Software Integration</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>Automation Services</h3>
+                            <a href="Marketing_Automation.html">Marketing Automation</a>
+                            <a href="Workflow_Automation.html">Workflow Automation</a>
+                            <a href="CRM_Solutions.html">CRM Solutions</a>
+                        </div>
+                    </div>
                 </li>
 
                 <li class="dropdown">
@@ -126,6 +104,14 @@
                 <a href="#" class="cta-button">Get Your Free Content Marketing Blueprint</a>
             </div>
             <p class="v3s-parag0apg">See what we'd do and how much it'd cost</p>
+        </div>
+    </div>
+    <div id="s1-img-container">
+        <div id="image-left">
+            <img src="assest/funnel-img/Content Marketing (1)/7.png" alt="">
+        </div>
+        <div id="image-right">
+            <img src="assest/funnel-img/Content Marketing (1)/8.png" alt="">
         </div>
     </div>
 
