--- a/CustomWebsiteDevelopment.html
+++ b/CustomWebsiteDevelopment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Content Marketing Services</title>
+    <title>Custom Website Development</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <style>
@@ -128,7 +128,14 @@
             <p class="v3s-parag0apg">let’s build a website that converts, engages, and scales with your business! 🚀</p>
         </div>
     </div>
-
+    <div id="s1-img-container">
+        <div id="image-left">
+            <img src="assest/funnel-img/customize web development/10.png" alt="">
+        </div>
+        <div id="image-right">
+            <img src="assest/funnel-img/customize web development/9.png" alt="">
+        </div>
+    </div>
     <div id="cover">
         <h2 class="cta-heading">
             Custom Websites 
