--- a/SMM.html
+++ b/SMM.html
@@ -72,12 +72,12 @@
                 <li class="dropdown">
                     <a href="#">Industries We Serve <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Healthcare</a></li>
-                        <li><a href="#">Education</a></li>
-                        <li><a href="#">Retail & E-commerce</a></li>
-                        <li><a href="#">Finance & Banking</a></li>
-                        <li><a href="#">Real Estate</a></li>
-                        <li><a href="#">Startups & Small Businesses</a></li>
+                        <li><a href="Healthcare.html">Healthcare</a></li>
+                        <li><a href="Education.html">Education</a></li>
+                        <li><a href="Retail&E-comm.html">Retail & E-commerce</a></li>
+                        <li><a href="Finance&Banking.html">Finance & Banking</a></li>
+                        <li><a href="RealEstate.html">Real Estate</a></li>
+                        <li><a href="Startups&SmallBuisnesses.html">Startups & Small Businesses</a></li>
                     </ul>
                 </li>
 
@@ -129,6 +129,15 @@
         </div>
     </div>
 
+    <div id="s1-img-container">
+        <div id="image-left">
+            <img src="assest/funnel-img/seo (3)/1.png" alt="">
+        </div>
+        <div id="image-right">
+            <img src="assest/funnel-img/seo (3)/2.png" alt="">
+        </div>
+    </div>
+
     <div id="cover">
         <h2 class="cta-heading">
             Why Social Media Matters  <span style="color: #03a4e3;">for Your Business</span>
@@ -177,10 +186,6 @@
 
         </section3>
     </div>
-
-
-
-
 
     <div class="services-page-cards">
         <div class="views3-section">
@@ -285,7 +290,7 @@
         </section3>
     </div>
 
-    <div class="services-page-cards">
+    <!-- <div class="services-page-cards">
         <div class="views3-section">
             <h2 class="v3s-heading">Introduction 
                 <span style="color: #03a4e3;">Why Your Business Needs PPC </span>
@@ -331,10 +336,7 @@
             </div>
             
         </div>
-    </div>
-
-
-
+    </div> -->
 
     <!-- <div class="services-page-cards">
         <div class="views3-section">
@@ -384,11 +386,6 @@
         </section3>
     </div> -->
     <!-- SECTION1 END -->
-
-
-
-    
-
 
     <!-- faq section start  -->
 
