--- a/index.html
+++ b/index.html
@@ -26,54 +26,47 @@
             <div class="logo">
                 <a href="index.html"><img src="assest/logos/logo-white.webp" alt="Logo"></a>
             </div>
+            <div id="mobile-logo">
+                <a href="index.html"><img src="assest/logos/logo-blue.png" alt="Logo"></a>
+            </div>
             <div class="menu-toggle">☰</div>
 
             <ul class="nav-menu">
                 <li><a id="tb" href="http://127.0.0.1:5501/index.html">Home</a></li>
 
-                <li class="dropdown">
+                <li class="dropdown services">
                     <a id="tb" href="service.html">Services <i class="fa-solid fa-caret-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li class="dropdown">
-                            <a href="">Digital Marketing </a>
-                            <ul class="submenu">
-                                <li><a href="SEO.html">SEO</a></li>
-                                <li><a href="digital_marketing.html">PPC Advertising</a></li>
-                                <li><a href="SMM.html">Social Media Marketing</a></li>
-                                <li><a href="CMS.html">Content Marketing</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">Web Development</a>
-                            <ul class="submenu">
-                                <li><a href="CustomWebsiteDevelopment.html">Custom Website Development</a></li>
-                                <li><a href="E-Commerce.html">E-commerce Solutions</a></li>
-                                <li><a href="CMS_Development.html">CMS Development</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">App Development</a>
-                            <ul class="submenu">
-                                <li><a href="iOS_&_Android_Development.html">iOS & Android App Development</a></li>
-                                <li><a href="Hybrid.html">Hybrid App Solutions</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">Software Development</a>
-                            <ul class="submenu">
-                                <li><a href="Custom_Software_Solutions.html">Custom Software Solutions</a>  </li>
-                                <li><a href="Enterprice_Software_Integration.html">Enterprise Software Integration</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#">Automation Services</a>
-                            <ul class="submenu">
-                                <li><a href="Marketing_Automation.html">Marketing Automation</a></li>
-                                <li><a href="Workflow_Automation.html">Workflow Automation</a></li>
-                                <li><a href="CRM_Solutions.html">CRM Solutions</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <div class="mega-menu">
+                        <div class="mega-column">
+                            <h3>Digital Marketing</h3>
+                            <a href="SEO.html">SEO</a>
+                            <a href="digital_marketing.html">PPC Advertising</a>
+                            <a href="SMM.html">Social Media Marketing</a>
+                            <a href="CMS.html">Content Marketing</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>Web Development</h3>
+                            <a href="CustomWebsiteDevelopment.html">Custom Website Development</a>
+                            <a href="E-Commerce.html">E-commerce Solutions</a>
+                            <a href="CMS_Development.html">CMS Development</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>App Development</h3>
+                            <a href="iOS_&_Android_Development.html">iOS & Android App Development</a>
+                            <a href="Hybrid.html">Hybrid App Solutions</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>Software Development</h3>
+                            <a href="Custom_Software_Solutions.html">Custom Software Solutions</a>
+                            <a href="Enterprice_Software_Integration.html">Enterprise Software Integration</a>
+                        </div>
+                        <div class="mega-column">
+                            <h3>Automation Services</h3>
+                            <a href="Marketing_Automation.html">Marketing Automation</a>
+                            <a href="Workflow_Automation.html">Workflow Automation</a>
+                            <a href="CRM_Solutions.html">CRM Solutions</a>
+                        </div>
+                    </div>
                 </li>
 
                 <li class="dropdown">
@@ -126,11 +119,6 @@
         <section class="banner main-video-banner">
             <div id="main">
                 <div id="back">
-                    <!-- <video src="Mark2.mp4" alt=""></video> -->
-                    <!-- <video src="API_OPTIMISEDmp4.mp4" alt=""></video>
-                    <video src="APPS_gradient.mp4" alt=""></video>
-                    <video src="PPC_grad.mp4"></video>
-                    <video src="PPC_grad.mp4"></video> -->
                     <video muted autoplay loop src="assest/video/images1.mp4"></video>
                 </div>
                 <div id="top">
@@ -158,13 +146,12 @@
             </div>
         </section>
     </div>
+    <div id="first-mobile">
+        <video muted autoplay loop src="assest/video/images1.mp4"></video>
 
+    </div>
 
     <div class="sectionitsoft second">
-
-
-
-
         <!-- Add some content for scrolling -->
         <section class="content">
             <section1>
@@ -176,7 +163,10 @@
                     your revenue goals. </p>
 
                 <div id="left-s1">
-                    <img src="assest/funnel-img/funnel-three.png    " alt="">
+                    <img class="dextop-funnel" src="assest/funnel-img/funnel-three.png    " alt="">
+                </div>
+                <div id="left-si-responsive">
+                    <img class="mobile-funnel-alt" src="assest/funnel-img/seo (3)/2.png" alt="">
                 </div>
 
                 <div id="s1-workarea">
